--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -7,9 +7,10 @@ RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
     && chmod +x phpunit \
     && mv phpunit /bin/phpunit \
     && apk update --no-cache \
-    && apk add --no-cache --virtual .build-deps $PHPIZE_DEPS libzip-dev zlib-dev \
+    && apk add --no-cache libzip-dev \
+    && apk add --no-cache --virtual .build-deps $PHPIZE_DEPS zlib-dev \
     && docker-php-ext-install zip \
-    && pecl install xdebug-2.7.0beta1 \
+    && pecl install xdebug-2.7.0RC1 \
     && docker-php-ext-enable xdebug \
     && apk del --no-cache .build-deps \
     && rm -rf /tmp/pear
